--- a/css/guild.css
+++ b/css/guild.css
@@ -1,9 +1,13 @@
 .guild-badge {
-    margin-top: 0 !important;
-    position: absolute;
-}
-
-.guild-badge h4 {
-    line-height: 12px !important;
-    height: 12px !important;
+    display: inline-block;
+    margin-right: 5px;
+    line-height: 12px;
+    font-size: 12px;
+    vertical-align: middle;
+    color: var(--text1);
+    background: #23ADE5;
+    border-radius: 12px;
+    padding: 3px 10px;
+    transform: scale(0.8);
+    border: 0.5px solid #fff;
 }
