--- a/css/liveroom.css
+++ b/css/liveroom.css
@@ -810,7 +810,6 @@ input[type=radio]:checked {
 
 .rua-emoji-container{
     display: none;
-    flex-wrap: wrap;
     overflow-y: scroll;
     overflow-x: hidden;
     margin-left: 5px;
@@ -818,4 +817,15 @@ input[type=radio]:checked {
 
 .rua-emoji-icon-inactive-new{
     opacity: 0.3;
+}
+
+.rua-emoji-container-show{
+    display: grid!important;
+    grid-template-columns: repeat(auto-fill, 65px);
+    justify-content: center;
+    grid-gap: 5px;
+}
+
+.rua-emoji-container-show-xs{
+    grid-template-columns: repeat(auto-fill, 30px) !important;
 }
