--- a/css/guild.css
+++ b/css/guild.css
@@ -4,7 +4,7 @@
     line-height: 12px;
     font-size: 12px;
     vertical-align: middle;
-    color: var(--text1);
+    color: #fff;
     background: #23ADE5;
     border-radius: 12px;
     padding: 3px 10px;
