--- a/css/darkButton.css
+++ b/css/darkButton.css
@@ -10,7 +10,7 @@
     --button-width: 125px;
     --toggle-size: calc(var(--button-height) - var(--toggle-padding));
     position: absolute;
-    background: #0f0;
+
     width: var(--button-width);
     height: var(--button-height);
     border-radius: calc(var(--button-height) / 2);
@@ -85,7 +85,7 @@
     width: var(--toggle-size);
     height: var(--toggle-size);
     position: absolute;
-    transition: var(--transition-time);
+    /*transition: var(--transition-time);*/
 }
 
 
