--- a/css/popup.css
+++ b/css/popup.css
@@ -268,6 +268,12 @@ option {
     right: 15px;
 }
 
+.danmaku-entry{
+    position: absolute;
+    top: 15px;
+    right: 65px;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background: #292a2d;
