--- a/css/danmaku.css
+++ b/css/danmaku.css
@@ -2,6 +2,7 @@
     --normal-dm-background: #ddf4ff;
     --fleet1-dm-background: #00D1F1;
     --fleet2-dm-background: #E17AFF;
+    --fleet3-dm-background: #FF7C28;
     --admin-dm-background: #f22c3d;
     --system-dm-background: #2AC864;
 }
@@ -141,7 +142,7 @@ body{
 }
 
 .rua-dm-danmaku-content.privilege-3{
-    background: var(--normal-dm-background);
+    background: var(--fleet3-dm-background);
 }
 
 .rua-dm-danmaku-content.system-dm{
