--- a/css/liveroom.css
+++ b/css/liveroom.css
@@ -969,7 +969,7 @@ input[type=radio]:checked {
 
 .add-btn-area{
     display: flex;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     margin-right: 40px;
     justify-content: right;
     position: absolute;
@@ -985,9 +985,10 @@ input[type=radio]:checked {
     height: 30px;
     line-height: 22px;
     border-radius: 15px;
-    background: var(--bili-brand);
+    background: #23ADE5;
     cursor: pointer;
     user-select: none;
+    transition: 0.3s;
 }
 
 .add-btn-area div:hover{
